# async-patterns

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: __init__.py  mock_server.py  runner.py  streaming_runner.py
benchmarks/scenarios/: pooling.py  resilience.py  retry.py
docs/: API.md  DEVELOPMENT.md
src/async_patterns/: __init__.py
src/async_patterns/engine/: __init__.py  _async_execution.py  async_base.py  async_engine.py  base.py  models.py  sync_engine.py  threaded_engine.py
src/async_patterns/observability/: __init__.py  loop_monitor.py
src/async_patterns/patterns/: __init__.py  circuit_breaker.py  pipeline.py  retry.py  semaphore.py
src/async_patterns/persistence/: __init__.py  _buffered.py  base.py  jsonl.py  sqlite.py
tests/: conftest.py
tests/integration/: test_circuit_breaker_integration.py  test_connection_pooling_benchmark.py  test_engine_comparison.py  test_mock_server_fixture.py  test_pipeline_integration.py  test_retry_integration.py
tests/unit/: test_async_base.py  test_async_engine.py  test_circuit_breaker.py  test_connection_pooling.py  test_engine_base.py  test_jsonl_writer.py  test_loop_monitor.py  test_mock_server.py  test_models.py  test_package_exports.py  test_pipeline.py  test_retry.py  test_semaphore.py  test_sqlite_writer.py  test_sync_engine.py  test_threaded_engine.py
