[tool.poetry]
name = "async-patterns"
version = "0.1.0"
description = "A production-grade benchmarking and implementation suite demonstrating mastery of Python's asyncio ecosystem for high-concurrency data acquisition."
authors = ["Aluizio Lira <alumlira@gmail.com>"]
readme = "README.md"
packages = [{include = "async_patterns", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.11.0"
httpx = "^0.28.1"
requests = "^2.31.0"
aiofiles = "^25.1.0"
aiosqlite = "^0.22.1"
uvloop = { version = "^0.22.1", markers = "sys_platform != 'win32'", optional = true }

[tool.poetry.extras]
performance = ["uvloop"]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"
pytest-mock = "^3.12.0"
pytest-xdist = "^3.6.0"
mypy = "^1.8.0"
ruff = "^0.14.10"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
branch = true
source = ["async_patterns"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["requests", "urllib3"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "B", "C4", "A", "SIM", "PT"]
ignore = ["E501", "B008", "C901"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]
"tests/**/*" = ["S101", "D", "A001", "A002", "N802", "N803", "N806", "B007", "F841", "SIM117"]

[tool.ruff.lint.isort]
known-first-party = ["async_patterns"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
